fix(cockpit): fix overlapping incident badges in instance history view
Related to: CAM-8150

--- a/webapps/ui/cockpit/client/styles/directives/process-diagram.less
+++ b/webapps/ui/cockpit/client/styles/directives/process-diagram.less
@@ -27,11 +27,15 @@
   .activity-top-right-position,
   .activity-bottom-right-position {
     position: absolute;
-    right: -1.3em;
+    right: -1.0em;
   }
 
   .activity-top-right-position {
     top: -0.85em;
+  }
+
+  .activity-bottom-right-position {
+    bottom: -0.65em;
   }
 
   .activity-top-left-position {
@@ -49,9 +53,6 @@
     }
   }
 
-  .activity-bottom-right-position {
-    bottom: -0.65em;
-  }
 
   .activity-bottom-left-position {
     position: absolute;
